--- a/practice.ipynb
+++ b/practice.ipynb
@@ -11,51 +11,8 @@
     "import numpy as np\n",
     "import warnings\n",
     "from functools import reduce\n",
-    "warnings.simplefilter(\"ignore\")\n",
-    "square=lambda x,y:x+y\n",
-    "#print(square(2,3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c82a342",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lst=[1,2,3,4,5,6]\n",
-    "lst2=[1,3,5,7,9]\n",
-    "reduce(square,lst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8825dc2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(map(square,lst,lst2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b44e7fe5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install qrcode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7115dbb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import qrcode as qd"
+    "import qrcode as qd\n",
+    "warnings.simplefilter(\"ignore\")"
    ]
   },
   {
